--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,46 @@
-/.idea/.gitignore
-/.idea/apex-chainable-batch.iml
-/projectFilesBackup/.idea/apex-chainable-batch.iml
-/.idea/checkstyle-idea.xml
-/.idea/encodings.xml
-/.idea/illuminatedCloud.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/IlluminatedCloud/tools_dev/OfflineSymbolTable.zip
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/vcs.xml
+# This file is used for Git repositories to specify intentionally untracked files that Git should ignore.
+# If you are not using git, you can delete this file. For more information see: https://git-scm.com/docs/gitignore
+# For useful gitignore templates see: https://github.com/github/gitignore
+
+# Salesforce cache
+.sfdx/
+.localdevserver/
+
+# IDEs
+.idea/
+.vscode/
+IlluminatedCloud/
+projectFilesBackup/
+# LWC VSCode autocomplete
+**/lwc/jsconfig.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+
+# Eslint cache
+.eslintcache
+
+# MacOS system files
+.DS_Store
+
+# Windows system files
+Thumbs.db
+ehthumbs.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+.prettierignore
+.prettierrc
+package-lock.json
+/sfdxproject.iml
+
+# Temporary folder created by scripts
+metadata/
+/sfcleverreach.iml
+/out
